# send-certificates

./: .env.example  .gitignore  .infisical.json  AGENTS.md  DEPLOYMENT.md  README.MD  README.md  body-unofficial.html  body.html  certificate unofficial.pptx  certificate.pptx  config.py  documentation.md  edit-pptx.py  edit_pptx.py  gdg_100x100.html  index.html  main.py  manual.py  models.py  output.txt  pyproject.toml  recipt.xlsx  requirements.txt  run.py  run.sh  send-campaign.py  services.py  storage.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2e51b9150fbd_generic_job_tracking.py  52228cb6a47a_add_event_fk_to_email_service_jobs.py  81b4d5da1835_fix_member_fk_cascade.py  a39f45620fe7_add_email_service_tables.py  c7f8e9a1b2d3_update_job_types_and_add_gender.py  d4e5f6a7b8c9_normalize_email_service_tables.py  e5f6a7b8c9d0_refactor_job_event_data_and_blasts.py
app/: config.py  main.py
app/core/: auth.py  config.py  error_handlers.py  exceptions.py  startup.py
app/db/: __init__.py  schema.py  session.py
app/models/: __init__.py  schemas.py
app/routers/: __init__.py  blasts.py  certificates.py  email_blasts.py  emails.py  generations.py  health.py  status.py
app/services/: __init__.py  certificate.py  database.py  email.py  email_blast.py  external_api.py  storage.py
assets/: fonts.conf
campaigns/business-bootcamp/: index.html
campaigns/campaign results/: business-bootcampl-batch-1-results.txt  business-bootcampl-batch-2-results.txt
docs/: ENVIRONMENT_VARIABLES.md
files/: base_users.csv
scripts/: pull_schema.py
tests/: test_cors.py
