[project]
name = "certificate-api"
version = "2.0.0"
description = "FastAPI server for certificate generation and email delivery"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
start = "run:main"
