[project]
name = "gdg-scores-email-service"
version = "3.0.0"
description = "FastAPI server for certificate generation and email delivery"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.1.1",
    "boto3>=1.35.0",
    "ruff>=0.11.0",
]

[project.scripts]
start = "run:main"

[tool.ruff]
target-version = "py313"
# according to https://docs.astral.sh/ruff/settings/#line-length, default is 88 max is 320.
line-length = 120
fix = true # automatically fix lint issues when possible
show-fixes = true
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF012", "FAST"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
